src/assets/sass/pages/_games.scss
.games-grid-container{
    margin-right:-16px;
}

.games-grid{
    list-style:none;
    margin:0;
    padding:0;
}

.games-grid-game-container{
    position:relative;
    display:inline-block;
    max-width:100%;
    width:220px;
    height:140px;
    margin:0 16px 16px 0;
    background-color:#646464;
    box-shadow:1.1px 2.8px 6px rgba(0, 0, 0, 0.3);
}

.games-grid-game{
    position:absolute;
    left:0;
    top:0;
    width:100%;
    height:100%;    
}

.games-grid-game__highlight{
    padding:15px;
    background-color:#14334a;
    background-image:linear-gradient(139deg, #14334a 0%, #14334a 11%, #006ba3 100%);
    color:#fff;
}

.games-grid-game__default .games-grid-banner--hq{
    content: "";
    width: 59px;
    height: 59px;
    background-image: url("../images/banner-hq.png");
    background-size: 100% 100%;
    background-repeat: no-repeat;
    bottom: 0;
    left: 0;
    position: absolute;
    display: inline-block;
}

.games-grid-game__default .games-grid-banner--new{
    content: "";
    width: 160px;
    height: 128px;
    background-image: url("../images/banner-new.png");
    background-size: 100% 100%;
    background-repeat: no-repeat;
    top: -6px;
    right: -6px;
    position: absolute;
    display: inline-block;
}

.games-grid-game__default .games-grid-banner--coming{
    content: "";
    width: 160px;
    height: 128px;
    background-image: url("../images/banner-coming.png");
    background-size: 100% 100%;
    background-repeat: no-repeat;
    top: -6px;
    right: -6px;
    position: absolute;
    display: inline-block;
}

.games-grid-game-name{
    font-size:1.4em;
    font-weight:bold;
}

.games-grid-game__highlight a{
    color: #ffffff;
}

.games-grid-game img.games-grid-game-icon{
    width: 100%;
    height: 100%;
    background-color: #00060D;
}

.games-grid-game .games-grid-game-icon-placeholder{
    display: block;
    color: #ffffff;
    font-size: 1.4em;
    font-weight:bold;
    text-align:center;
    padding: 15px 5px;
}

.games-grid-game-description p{
    margin:6px 0 0 0;
    font-size:1.2em;
}

.games-grid-game-info a{
    float:right;
    display:block;
    margin:0 0 0 10px;
    width:46px;
    height:46px;
    line-height:44px;
    font-size:2.2em;
    font-weight:bold;
    text-align:center;
    border:1px solid #fff;
    border-radius:50%;
    text-decoration:none;
}

.games-grid-game-demo-options{
    position:absolute;
    bottom:0;
    left:0;
    right:0;
    height:50px;
    background-color:$color-blue-dark;

    .games-grid-game-demo-title{
        position:relative;
        display:block;
        float:left;
        height:100%;
        padding:0 5px 0 15px;
        margin-right:20px;
        background-color:#007dbe;
        text-transform:uppercase;
        vertical-align:middle;
        line-height:50px;

        &:after{
            position:absolute;
            content:"";
            right:-10px;
            width:0;
            height:0;
            border-style:solid;
            border-width:25px 0 25px 10px;
            border-color:transparent transparent transparent #007dbe;
        }
    }

    .games-grid-game-demo{
        display:inline-block;
        margin:8px 10px;
        width:34px;
        height:34px;
        border:none;
        overflow:hidden;
        text-indent:-100em;
        cursor:pointer;
        background-color:transparent;
        background-size:contain;
        background-repeat:no-repeat;
        background-position:center center;

        &_desktop{
            background-image:url(../images/icon-desktop.png);
        }

        &_mobile{
            background-image:url(../images/icon-mobile.png);
        }
    }

    .or{
        vertical-align:middle;
        color:#fff;
    }
}

.modal-overlay{
    @include respond(small-only){
        overflow:scroll;
    }
}

.game-demo-modal{
    width: calc(100% - 50px);
    max-width: 1434px;

    @include respond(small-only){
        width: 100%;
    }
}

.game-demo-modal-container{
    display:flex;
    width:100%;
    background:#000;
    border:3px solid #fff;

    @include respond(small-only){
        display:block;
    }
}

.game-demo-modal-icon{
    display:block;
    z-index:2;
    position:absolute;
    width:30px;
    height:30px;
    font-size:16px;
    line-height:28px;
    text-align:center;
    color:#fff;
    text-transform:uppercase;
    border:1px $color-grey-dark solid;
    border-radius:50%;
    cursor:pointer;
    padding:0 4px 3px 4px;
    background: $color-grey-dark;
}

.game-demo-modal-close{
    top:-15px;
    right:-13px;

    @include respond(small-only){
        right:5px;
    }
}

.game-demo-modal-share{
    top:-15px;
    right:22px;
    padding-left: 2px;

    @include respond(small-only){
        right:40px;
    }
}

.game-demo-viewport{
    flex: 3;
    overflow: hidden;
    background-color: #000;
    display: flex;
    align-items: center;
    justify-content: center;

    @include respond(small-only) {
        display: block;
        flex: none;
    }

    .game-demo-viewport-frame {
        width: 100%;

        .game-demo-viewport-frame-holder {
            position: relative;
            width: 100%;
            height: 0;
            padding-bottom: 59%;

            iframe {
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
                margin: 0;
                padding: 0;
                border: none !important;
            }
        }
    }
}

.game-demo-modal-detail{
    display: table-cell;
    flex: 1;
    position: relative;
    padding:20px 30px 60px 30px;
    background:#fff;
//    border-left:2px solid white;

    @include respond(small-only){
        width:100%;
        display:block;
    }

    .game-demo-modal-title{
        font-size:2.2em;
        font-weight:600;
    }

    .game-demo-modal-description{
        margin:15px 0;
        font-size:1.4em;
        color:$color-grey-dark;
        text-align: justify;
    }

    .game-demo-modal-provider{

        .game-provider-icon{
            max-height:50px;
            margin: 15px 0 0 0;
        }

        > span{
            font-size: 1.4em;
        }
    }

    .btn{
        position:absolute;
        bottom:90px;
        left:50%;
        margin-left:-40%;
        width:80%;
        font-size:1.8em;
    }

    dl{
        margin-bottom:0;
    }

    dl + dl{
        margin-top:0;
    }

    dt,dd{
        display:inline-block;
        width:30%;
        margin:0;
        padding:6px 0;
        font-size:1.3em;
        color:$color-grey-dark;
        border-bottom:1px solid $color-grey;

        @include respond(large){
            padding:8px 0;
            font-size:1.4em;
        }

        &:empty:after{
            content:"\00a0";
        }
    }

    dt{
        font-weight:bold;
    }

    dd{
        width:70%;
        text-align:right;
    }

    h3{
        font-size: 1.7em;
        color: $color-grey-dark;
        margin: 20px 0 5px 0;
    }

    ul.downloads{
        margin: 0 0 15px 15px;
        padding: 0;

        li {
            list-style: disc;
            font-size: 1.4em;
            line-height: 1.8em;

            a, a:visited, a:active{
                color: $color-grey-dark;
                text-decoration: none;
                border-bottom: 1px $color-grey-dark dotted;
            }

            a:hover{
                border-bottom: none;
            }
        }
    }

    .game-demo-switch-container{
        position:absolute;
        bottom:0;
        right:0;
        width:100%;
        height:65px;
        text-align:center;
        background:$color-blue-dark;
        overflow: hidden;

        > span{
            color: $color-grey-light;
            font-size: 1.4em;
            text-transform: uppercase;
            height: 65px;
            line-height: 65px;
            vertical-align: middle;
            padding: 0 0 0 20px;
            white-space: nowrap;
            float: right;
        }

        .btn{
            bottom:10px;
        }
    }

    .game-demo-switch-button-container{
        float:right;
        height:35px;
        margin:15px;
        background:$color-grey;
        border-radius:15px;
        text-align:left;
        overflow:hidden;

        .game-demo-switch-choice{
            width:50%;
            height:100%;
            line-height:2em;
            padding: 0 20px;
            background:$color-grey-dark;
            border:none;
            font-size:1.2em;
            cursor: pointer;
            color:#fff;
            text-transform: uppercase;

            &:first-child{
                border-right:1px solid #fff;
            }

            &.active{
                background:$color-blue;
            }
        }
    }
}

.game-demo-icon-placeholder{
    color: #fff;
    text-align: center;

    > img{
      max-width: 100%;
    }

    > span{
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        font-size: 2em;
    }
}

